[project]
name = "portfolio-prioritizer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
portfolio = "portfolio_prioritizer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

